--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -1,3 +1,5 @@
+
+/*The "*" is a selctore whichs means all in this case all elements have the following style*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -7,24 +9,24 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+    
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,7 +35,7 @@ body {
 }
 
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
     list-style-type: none;
@@ -48,14 +50,6 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
 
 .float-left {
     float: left;
@@ -188,13 +182,13 @@ p {
 }
 
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
