Cleaned up Css.style sheet, put all class that relate together for organization and easier changes for a specific area.

--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -9,7 +9,8 @@
 body {
     background-color: #d9dcd6;
 }
-    /*header and navagation CSS style*/
+
+/*header and navagation CSS style*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -66,7 +67,8 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/*I moved all content that relate together*/
+/*This area is for the style of class=search-engine-optimization*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -75,7 +77,16 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+.search-engine-optimization img {
+    max-height: 200px;
+}
 
+.search-engine-optimization h2 {
+    margin-bottom: 10px;
+    font-size: 36px;
+}
+
+/*This area is for the style of class=online-reputation-management*/
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -84,7 +95,16 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+.online-reputation-management img {
+    max-height: 200px;
+}
 
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*This is the style area for class=social-media-marketing*/
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -94,26 +114,8 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
 .social-media-marketing img {
     max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 10px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 .social-media-marketing h2 {
@@ -121,7 +123,7 @@ p {
     font-size: 36px;
 }
 
-
+/*This is the aside of the website class benefits*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -133,32 +135,13 @@ p {
     background-color: #2589bd;
 }
 
+/*This is the style area for the aside class=benefit-lead*/
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
 .benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -169,10 +152,32 @@ p {
     max-width: 150px;
 }
 
+/*This is the style area is for the aside class=benefit-brand*/
+.benefit-brand {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+/*This is the style area for the aside class=benefit-cost*/
+.benefit-cost {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .benefit-cost img {
@@ -181,7 +186,7 @@ p {
     max-width: 150px;
 }
 
-
+/*This is the footer of the page*/
 footer {
     padding: 30px;
     clear: both;
