--- a/assets/style.css
+++ b/assets/style.css
@@ -21,11 +21,13 @@ p img{
 /*created a container class to style and make bg white*/
 .container{
     background-color: white;
+    opacity: .92;
     padding-bottom: 25px;
     float: left;
     margin-top:30px;
     margin-left: 30px;
     margin-bottom: 40px;
+    margin-right: 30px;
     
 }
 
@@ -33,6 +35,10 @@ p img{
 img{
     width: 300px;
     height: 300px;
+    opacity: .5;
+}
+img:hover{
+    opacity: 1.0;
 }
 
 footer{
