--- a/assets/style.css
+++ b/assets/style.css
@@ -21,8 +21,8 @@ p img{
 /*created a container class to style and make bg white*/
 .container{
     background-color: white;
-    opacity: .92;
-    padding-bottom: 25px;
+    opacity: .95;
+    padding: 25px;
     float: left;
     margin-top:30px;
     margin-left: 30px;
@@ -36,6 +36,7 @@ img{
     width: 300px;
     height: 300px;
     opacity: .5;
+    padding: 10px;
 }
 img:hover{
     opacity: 1.0;
