--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,7 @@ img{
 }
 img:hover{
     opacity: 1.0;
+    background-color: none;
 }
 
 footer{
@@ -49,8 +50,9 @@ footer{
 footer img{
     width: 50px;
     height: 50px;
-    background-color: rgb(59, 59, 59);
-}
+    /* background-color: rgb(59, 59, 59);
+} */}
+
 a{
     color: white;
 }
