--- a/assets/style.css
+++ b/assets/style.css
@@ -13,17 +13,23 @@ body{
 h1{
     color:rgb(7, 179, 209);
     font-family: 'Shrikhand', cursive;
+    text-align: center;
     
 }
+
 /*make sure about me image is certain size*/
 p img{
     max-height: 250px;
     max-width: 200px;
+}
+.content{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: black;
+    font-weight: 10;
 }   
 /*created a container class to style and make bg white*/
 .container{
-    background-color: white;
-    opacity: .95;
+    background-color: rgba(255, 255, 255, 0.822);
     padding: 25px;
     float: left;
     margin-top:30px;
@@ -34,7 +40,7 @@ p img{
 }
 
 
-img{
+.portfolio img{
     width: 300px;
     height: 300px;
     opacity: .75;
@@ -57,3 +63,97 @@ footer img{
 a{
     color: white;
 }
+
+
+.welcome{
+   background-color:  rgba(24, 156, 179, 0);
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 110%;
+}
+.container{
+    color: rgba(24, 156, 179);
+    display: block;
+    font-family: 'Shrikhand', cursive;
+}
+
+
+h2{
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 5px;
+    position: relative;
+    animation: text 3s 1;
+    margin-bottom: -20px;
+}
+h2 span{
+    color: rgb(7, 197, 245);
+    letter-spacing: 5px;
+    margin-left: 2px;
+    animation: text 3s 1;
+    margin-bottom: -20px;
+
+}
+.text2{
+    font-size:25px;
+    font-weight: 250;
+    animation: text 2s 1;
+}
+
+@keyframes text{
+    0%{
+        color: transparent;
+        margin-bottom: -20px;
+    }
+    30%{
+        letter-spacing: 8px;
+        margin-bottom: -20px;
+    }
+    80%{
+        letter-spacing: 5px;
+        margin-bottom: -20px;
+    }
+}
+
+button{
+    background-color: transparent;
+    border: dotted;
+    border-color: rgba(24, 156, 179);
+    
+}
+button svg{
+    color: rgba(24, 156, 179);
+      
+  
+}
+.dropdown{
+    position: relative;
+    display: inline-block;
+}   
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: transparent;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    text-align: center;
+    color: rgba(24, 156, 179);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+.dropdown-content a:hover {background-color:  rgba(24, 156, 179, 0.233)}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color:  rgba(24, 156, 179, 0.233);}
+
