--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,8 @@
 
 /*BG COLOR OF THE BRAND*/
-/* .navbar-brand{
-    font-family: 'Shrikhand', cursive;
-    background-color: rgb(17, 187, 150);
-} */
+.navbar{
+     background-color: #37c0bc;
+}
 /*back ground */
 body{
     background-image: url(../assets/images/bodybg.jpg);
@@ -57,6 +56,7 @@ img:hover{
 
 footer{
     color: white;
+    background-color: #37c0bc;
 }
 footer img{
     width: 50px;
@@ -168,3 +168,6 @@ button svg{
 
 .dropdown:hover .dropbtn {background-color:  rgba(24, 156, 179, 0.233);}
 
+.bg-info{
+    background-color: #37c0bc;
+}
