--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -61,6 +61,7 @@ footer{
 footer img{
     width: 50px;
     height: 50px;
+    aspect-ratio: 1.0;
     /* background-color: rgb(59, 59, 59);
 } */}
 
