--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -8,12 +8,14 @@ footer{
     background-color: #37c0bc;
 }
 footer img{
-    width: 50px;
-    height: 50px;
+    align-items: center;
+    width: 30px;
+    height: 30px;
     aspect-ratio: 1.0;
     /* background-color: rgb(59, 59, 59);
 } */}
 
 a{
     color: white;
+    margin-right: 5px;
 }
