--- a/src/Components/Portfolio/style.css
+++ b/src/Components/Portfolio/style.css
@@ -2,13 +2,24 @@ img:hover{
     opacity: 1.0;
     background-color:#75bbb9;
 }
-a{
+a:link{
+    color: white;
+}
+a:visited{
     color: white;
 }
 
 .portfolio img{
     width: 300px;
     height: 300px;
-    opacity: .75;
+    opacity: .95;
     padding: 10px;
+}
+a {
+    font-family: 'Shrikhand', cursive;
+    color:rgb(7, 179, 209);
+    border: none;
+}
+h3{
+    font-family: 'Shrikhand', cursive;
 }
