--- a/src/Components/Main/style.css
+++ b/src/Components/Main/style.css
@@ -56,7 +56,7 @@ h2 span{
  button{
     background-color: transparent;
     /* border: dotted; */
-    border-color: rgba(24, 156, 179);
+    border-color: rgb(0, 0, 0);
     
 }
 button svg{
@@ -65,6 +65,7 @@ button svg{
 .dropdown{
     position: relative;
     display: inline-block;
+    border: solid;
 }   
 
 .dropdown-content {
