--- a/src/Components/Nav/style.css
+++ b/src/Components/Nav/style.css
@@ -1,8 +1,6 @@
 nav{
-    background-color: #37c0bc;
-    
+    background-color: #37c0bbb9;
 }
-
 
 nav button{
     font-family: 'Shrikhand', cursive;
